Fix text corruption on inline settings of notification.

The texts was not shown properly on the inline settings of the notification, after an animation had been implemented. This CL fixes the text corruption by disabling subpixel rendering.

BUG=809849

Change-Id: Ib025539e6628a5eecc15bc2c69b557a8b351509b